<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_podcast"
    style="@style/LinearLayoutParentStyle"
    android:orientation="vertical"
    tools:context=".PodCastActivity">

    <LinearLayout
        style="@style/DescriptionStyle">

        <TextView
            style="@style/TextStyle"
            android:text="@string/podcast_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            style="@style/LinearPCStyle">
            <Button
                style="@style/PCButton"
                android:id="@+id/bshow1"
                android:text="@string/show_1"/>
            <TextView
                style="@style/ShowInfoStyle"
                android:text="@string/show_description"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearPCStyle">
            <Button
                style="@style/PCButton"
                android:id="@+id/bshow2"
                android:text="@string/show_2"/>
            <TextView
                style="@style/ShowInfoStyle"
                android:text="@string/show_description"/>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearPCStyle">
            <Button
                style="@style/PCButton"
                android:id="@+id/bshow3"
                android:text="@string/show_3"/>
            <TextView
                style="@style/ShowInfoStyle"
                android:text="@string/show_description"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
